<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="menu_home">Home</string>
    <string name="menu_movies">Movies</string>
    <string name="menu_tvshow">Tv Show</string>
    <string name="judul_movies_home">Watch Movies</string>
    <string name="lihat_movies">Lihat semua</string>
    <string name="judul_item_movies">Aladdin</string>
    <string name="durasi">8 Jam</string>
    <string name="rating">8,5</string>
    <string name="genre">drama</string>
    <string name="setting">Ubah bahasa</string>
    <string name="tanggal_rilis">Agustus 21, 2019</string>
    <string name="story_line">Story Line</string>
    <string name="episodes">8 Episodes</string>
    <string name="userscore">3,1%</string>
    <string-array name="data_judul_movies">
        <item>Aladdin</item>
        <item>Alita</item>
        <item>Aquaman</item>
        <item>Avengers: Endgame</item>
        <item>Bohemian</item>
        <item>Creed</item>
        <item>Crimes of Grindelwald</item>
        <item>Glass</item>
        <item>How to Train Your Dragon</item>
        <item>Avenger: Infinity War</item>
        <item>The Lion King</item>
        <item>Master Z: Ip Man Legacy</item>
        <item>Terminator: Dark Fate</item>
    </string-array>
    <string-array name="data_deskripsi_movies">
        <item>A kindhearted street urchin named Aladdin embarks on a magical adventure after finding a lamp that releases a wisecracking genie while a power-hungry Grand Vizier vies for the same lamp that has the power to make their deepest wishes come true.</item>
        <item>When Alita awakens with no memory of who she is in a future world she does not recognize, she is taken in by Ido, a compassionate doctor who realizes that somewhere in this abandoned cyborg shell is the heart and soul of a young woman with an extraordinary past.</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orms half-human, half-Atlantean brother and true heir to the throne.</item>
        <item>After the devastating events of Avengers: Infinity War, the universe is in ruins due to the efforts of the Mad Titan, Thanos. With the help of remaining allies, the Avengers must assemble once more in order to undo Thanos actions and restore order to the universe once and for all, no matter what consequences may be in store.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock n roll band Queen in 1970. Hit songs become instant classics. When Mercurys increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</item>
        <item>The former World Heavyweight Champion Rocky Balboa serves as a trainer and mentor to Adonis Johnson, the son of his late friend and former rival Apollo Creed.</item>
        <item>Gellert Grindelwald has escaped imprisonment and has begun gathering followers to his cause elevating wizards above all non-magical beings. The only one capable of putting a stop to him is the wizard he once called his closest friend, Albus Dumbledore. However, Dumbledore will need to seek help from the wizard who had thwarted Grindelwald once before, his former student Newt Scamander, who agrees to help, unaware of the dangers that lie ahead. Lines are drawn as love and loyalty are tested, even among the truest friends and family, in an increasingly divided wizarding world.</item>
        <item>In a series of escalating encounters, former security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men.</item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccups reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>Simba idolises his father, King Mufasa, and takes to heart his own royal destiny. But not everyone in the kingdom celebrates the new cubs arrival. Scar, Mufasas brother—and former heir to the throne—has plans of his own. The battle for Pride Rock is ravaged with betrayal, tragedy and drama, ultimately resulting in Simbas exile. With help from a curious pair of newfound friends, Simba will have to figure out how to grow up and take back what is rightfully his.</item>
        <item>Following his defeat by Master Ip, Cheung Tin Chi (Zhang) tries to make a life with his young son in Hong Kong, waiting tables at a bar that caters to expats. But it s not long before the mix of foreigners, money, and triad leaders draw him once again to the fight.</item>
        <item>More than two decades have passed since Sarah Connor prevented Judgment Day, changed the future, and re-wrote the fate of the human race. Dani Ramos is living a simple life in Mexico City with her brother and father when a highly advanced and deadly new Terminator – a Rev-9 – travels back through time to hunt and kill her. Danis survival depends on her joining forces with two warriors: Grace, an enhanced super-soldier from the future, and a battle-hardened Sarah Connor. As the Rev-9 ruthlessly destroys everything and everyone in its path on the hunt for Dani, the three are led to a T-800 from Sarahs past that may be their last best hope.</item>
    </string-array>
    <string-array name="data_rilis_movies">
        <item>September 10, 2019</item>
        <item>July 23, 2019</item>
        <item>March 26, 2019</item>
        <item>August 13, 2019</item>
        <item>February 12, 2019</item>
        <item>March 1, 2016</item>
        <item>March 12, 2019</item>
        <item>April 16, 2019</item>
        <item>May 21, 2019</item>
        <item>August 14, 2018</item>
        <item>October 22, 2019</item>
        <item>April 12, 2019</item>
        <item>November 1, 2019</item>
    </string-array>
    <string-array name="data_duration_movies">
        <item>2h 8m</item>
        <item>2h 2m</item>
        <item>2h 24m</item>
        <item>3h 1m</item>
        <item>2h 15m</item>
        <item>2h 13m</item>
        <item>2h 14m</item>
        <item>2h 9m</item>
        <item>1h 44m</item>
        <item>2h 29m</item>
        <item>1h 58m</item>
        <item>1h 47m</item>
        <item>2h 8m</item>
    </string-array>
    <string-array name="data_rating_movies">
        <item>71%</item>
        <item>69%</item>
        <item>68%</item>
        <item>83%</item>
        <item>80%</item>
        <item>73%</item>
        <item>69%</item>
        <item>66%</item>
        <item>77%</item>
        <item>83%</item>
        <item>71%</item>
        <item>53%</item>
        <item>64%</item>
    </string-array>
    <string-array name="data_genre_movies">
        <item>Adventure, Fantasy, Romance, Comedy, Family</item>
        <item>Action, Science Fiction, Thriller, Adventure</item>
        <item>Action, Adventure, Fantasy</item>
        <item>Adventure, Science Fiction, Action</item>
        <item>Drama, Music</item>
        <item>Drama</item>
        <item>Adventure, Fantasy, Family</item>
        <item>Thriller, Drama, Science Fiction</item>
        <item>Animation, Family, Adventure</item>
        <item>Adventure, Action, Science Fiction</item>
        <item>Adventure, Animation, Drama</item>
        <item>Action</item>
        <item>Action, Science Fiction</item>
    </string-array>
    <string-array name="data_judul_tvshow">
        <item>Arrow</item>
        <item>Doom Patrol</item>
        <item>Dragon Ball Z</item>
        <item>Family Guy</item>
        <item>The flash</item>
        <item>Game of Thrones</item>
        <item>Gotham</item>
        <item>Greys Anatomy</item>
        <item>Hanna</item>
        <item>Naruto Shippuden</item>
    </string-array>
    <string-array name="data_tahun_tvshow">
        <item>2012</item>
        <item>2019</item>
        <item>1986</item>
        <item>1999</item>
        <item>2014</item>
        <item>2011</item>
        <item>2014</item>
        <item>2005</item>
        <item>2019</item>
        <item>2007</item>
    </string-array>
    <string-array name="data_duration_tvshow">
        <item>42m</item>
        <item>60m</item>
        <item>26m</item>
        <item>22m</item>
        <item>44m</item>
        <item>60m</item>
        <item>43m, 60m</item>
        <item>43m</item>
        <item>50m</item>
        <item>25m</item>
    </string-array>
    <string-array name="data_rating_tvshow">
        <item>58%</item>
        <item>65%</item>
        <item>80%</item>
        <item>65%</item>
        <item>67%</item>
        <item>81%</item>
        <item>69%</item>
        <item>64%</item>
        <item>67%</item>
        <item>76%</item>
    </string-array>
    <string-array name="data_genre_tvshow">
        <item>Crime, Drama, Mystery, Action, Adventure</item>
        <item>Action, Adventure, Sci-Fi, Fantasy</item>
        <item>Action, Adventure, Sci-Fi, Fantasy, Animation, Comedy</item>
        <item>Animation, Comedy</item>
        <item>Drama, Sci-Fi, Fantasy</item>
        <item>Drama, Sci-Fi, Fantasy, Adventure, Action</item>
        <item>Drama, Fantasy, Crime</item>
        <item>Drama</item>
        <item>Action, Adventure, Drama</item>
        <item>Animation, Comedy, Drama</item>
    </string-array>
    <string-array name="data_episodes_tvshow">
        <item>10 Episodes</item>
        <item>15 Episodes</item>
        <item>153 Episodes</item>
        <item>8 Episodes</item>
        <item>9 Episodes</item>
        <item>6 Episodes</item>
        <item>12 Episodes</item>
        <item>9 Episodes</item>
        <item>8 Episodes</item>
        <item>87 Episodes</item>
    </string-array>
</resources>