<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_primary"
    android:orientation="horizontal"
    android:padding="@dimen/margin8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/img_poster"

        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/putih"
            android:textSize="18sp"
            tools:text="@string/judul_item_movies" />

        <TextView
            android:id="@+id/txt_episodes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/abu_gelap"
            android:textSize="14sp"
            tools:text="@string/episodes" />

        <TextView
            android:id="@+id/user_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/userscore"
            android:textAlignment="center"
            android:textColor="@color/abu_gelap"
            android:textSize="14sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/img_poster"
        android:layout_width="75dp"
        android:layout_height="100dp"
        android:layout_marginRight="@dimen/margin12"
        android:scaleType="centerCrop"
        android:src="@drawable/poster_aquaman" />
</RelativeLayout>